# nonebot-plugin-chatrecorder

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/actions/setup-mysql/: action.yml  entrypoint.sh
.github/actions/setup-postgres/: action.yml  entrypoint.sh
.github/actions/setup-python/: action.yml
.github/workflows/: codecov.yml  release.yml  update_poetry_lock.yml
nonebot_plugin_chatrecorder/: __init__.py  config.py  consts.py  dirs.py  message.py  model.py  record.py  record.pyi  utils.py
nonebot_plugin_chatrecorder/adapters/: __init__.py  console.py  consts.py  discord.py  dodo.py  feishu.py  kaiheila.py  message.py  onebot_v11.py  onebot_v12.py  qq.py  qqguild.py  red.py  satori.py  telegram.py  utils.py  villa.py
nonebot_plugin_chatrecorder/migrations/: 0f0a7bc40f3c_message_id_length.py  2cad88d938f1_.py  2cad88d938f1_init_db.py  44cce443d2c0_drop_column.py  46327b837dd8_data_migrate.py  46327b837dd8_empty.py  6fbd51070a37_uninfo_id_not_none.py  7228a3a08576_ob12.py  902a51ac4032_add_session.py  9bca28bcb998_msg_type.py  9d1364fbfb76_add_uninfo_id.py  a8fc25d97828_rename_uninfo_id.py  b50d3f3f0443_drop_session_id.py  bc43ce947963_data_migrate.py  cf3967d7f72f_fill_uninfo_id.py  de6827ead8fe_foreignkey.py  e6460fccaf90_init_db.py  ea78280f71da_init_db.py
tests/: conftest.py  test_chatrecorder.py  test_console.py  test_discord.py  test_dodo.py  test_fake_event.py  test_feishu.py  test_get_records.py  test_kaiheila.py  test_onebot_v11.py  test_onebot_v12.py  test_qq.py  test_qqguild.py  test_record_msg_v11.py  test_record_msg_v12.py  test_red.py  test_satori.py  test_telegram.py  test_villa.py  utils.py
