[tool.poetry]
name = "nonebot_plugin_chatrecorder"
version = "0.5.1"
description = "适用于 Nonebot2 的聊天记录插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-chatrecorder"
repository = "https://github.com/noneplugin/nonebot-plugin-chatrecorder"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { version = "^2.0.1", extras = ["fastapi"] }
nonebot-plugin-session = "^0.2.3"
nonebot-plugin-orm = ">=0.3.0,<1.0.0"
nonebot-plugin-session-orm = "^0.1.1"
nonebot-plugin-localstore = "^0.5.0"

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.0.0"
nonebot-plugin-orm = { extras = ["default"], version = ">=0.3.0,<1.0.0" }
nonebot-plugin-datastore = "^1.0.0"

[tool.poetry.group.test.dependencies]
nonebug = "^0.3.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.2"
pytest-asyncio = ">=0.20.2,<0.22.0"
asyncpg = "^0.27.0"
aiomysql = "^0.1.0"

[tool.poetry.group.adapters]
optional = true

[tool.poetry.group.adapters.dependencies]
nonebot-adapter-onebot = "^2.2.4"
nonebot-adapter-console = "^0.4.0"
nonebot-adapter-kaiheila = "^0.2.12"
nonebot-adapter-telegram = "^0.1.0b14"
nonebot-adapter-feishu = "^2.2.0"
nonebot-adapter-red = "^0.7.4"
nonebot-adapter-discord = "^0.1.0b4"
nonebot-adapter-dodo = "^0.1.3"
nonebot-adapter-satori = "^0.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.nonebot]
plugins = ["nonebot_plugin_chatrecorder"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "Q"]
ignore = ["E402", "E501", "E711", "C901", "UP037"]

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError:",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
